// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders custom styles 1`] = `
.c0 {
  display: grid;
  height: 100px;
  width: 100px;
  border-radius: 0;
}

<div
  className="c0"
  display="grid"
  height="100px"
  width="100px"
/>
`;

exports[`it renders default styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  width: 100px;
  border-radius: 0;
}

<div
  className="c0"
  display="flex"
  height="100px"
  width="100px"
/>
`;
